feat: update readme and bump version to 0.2.0
Major refactor of initialization system and documentation:
• Simplify InitConfig to two modes: built-in ROM and custom ROM
• Add comprehensive README with features, examples, and CLI usage
• Remove unused complex action (up+B) from action set
• Add py.typed for type checking support
• Update rendering to integrate pygame properly
• Add test suite with pytest fixtures

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ smb2_gym = ["_nes/**/*"]
 
 [project]
 name = "smb2-gym"
-version = "0.1.832111"
+version = "0.2.0"
 authors = [{ name = "Alexei Quick" }]
 description = "Super Mario Bros 2 (Europe) Gymnasium Environment"
 readme = "README.md"
@@ -44,7 +44,7 @@ dependencies = [
 "Bug Tracker" = "https://github.com/alexeiquickcode/smb2-gym/issues"
 
 [project.optional-dependencies]
-dev = ["pytest>=7.0", "isort", "yapf", "basedpyright"]
+dev = ["pytest", "isort", "yapf", "basedpyright"]
 
 [project.scripts]
 smb2-play = "smb2_gym.play_human:main"
