--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
       - staging
-      - prod
+      - main 
 
 jobs:
   build-and-publish:
@@ -36,7 +36,7 @@ jobs:
         python -m twine upload --repository testpypi dist/*
 
     - name: Publish to PyPI
-      if: github.ref == 'refs/heads/prod'
+      if: github.ref == 'refs/heads/main'
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
